@@ -1,6 +1,13 @@
 Revision history for libev, a high-performance and full-featured event loop.
 
 TODO: ev_walk
+TODO: child wactehr execution order w.r.t. childsigcb reg. priorities
+TODO: remain
+	- Denis F. Latypoff corrected many typos in example code snippets.
+        - honor autoconf detection of EV_USE_CLOCK_SYSCALL, also double-
+          check that the syscall number is available before trying to
+          use it (reported by ry@tinyclouds).
+
 3.6  Tue Apr 28 02:49:30 CEST 2009
 	- multiple timers becoming ready within an event loop iteration
           will be invoked in the "correct" order now.
